minimaxi 完全对齐官方api
